Ajouter un bouton

--- a/testgit.html
+++ b/testgit.html
@@ -8,5 +8,9 @@
 <body>
     <b> Bonjour de la part de Michael Couture</b><br>
     <b>ça fonctionne.</b>
+    
+    <button onclick="window.open('https://github.com/')">Ouvrir un lien externe</button>
+    
+</body>
 </body>
 </html>
